--- a/misc/Makefile.sub
+++ b/misc/Makefile.sub
@@ -116,7 +116,7 @@ appimage: all cached/appimagetool/AppRun
 	@echo '  RUN     ' appimagetool ...
 	$(Q) ARCH=x86_64 cached/appimagetool/AppRun --comp=xz -n $(if $(findstring 1, $(V)), -v) $(APPDIR2)
 	$(Q) rm -fr $(APPDIR) $(APPDIR2)
-	$(Q) mv BEAST-x86_64.AppImage out/bin/
-	$(Q) ls -l -h --color=auto out/bin/BEAST-x86_64.AppImage
+	$(Q) mv BEAST-x86_64.AppImage out/bin/beast-$(clean_version).x64.AppImage
+	$(Q) ls -l -h --color=auto out/bin/beast-*.x64.AppImage
 .PHONY: appimage
 CLEANDIRS += $(APPDIR) $(APPDIR2)
