--- a/misc/Makefile.sub
+++ b/misc/Makefile.sub
@@ -17,7 +17,17 @@ cppcheck:
 	$(Q) mv cppcheck.err out/cppcheck/cppcheck.log
 	misc/blame-lines -b out/cppcheck/cppcheck.log
 .PHONY: cppcheck
-# A regular cppcheck run can be carried out before the sources are built
+# Note, 'cppcheck' can be carried out before the sources are built
+
+# == hacks ==
+listhacks:
+	$(AM_V_GEN)
+	$(Q) mkdir -p out/hacks/
+	misc/keywords.sh -g -l >out/hacks/hacks.log
+	misc/blame-lines -b out/hacks/hacks.log
+	misc/keywords.sh -c out/hacks/hacks.blame > out/hacks/hacks.vt
+.PHONY: listhacks
+# Note, 'listhacks' can be carried out before the sources are built
 
 # == unused ==
 listunused:
