.travis.yml: merge appimage check + bintray for faster uploads
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,29 +27,29 @@ jobs:
     # Generate all possible source code linting reports,
     # sort slow jobs into separate stages to avoid timeouts.
     - stage: Stage1
-      name: "Quick-1 (autogen.sh + non-binary tests)"
+      name: "Quick-1 (autogen.sh)"
       env: PIPELINE=clang
       before_install: |
         uname -a && pwd && echo nproc=`nproc` && rm -v -rf ~/cache/* ~/beast &&
         travis_retry git fetch --unshallow && cd .. && mv beast ~/
       script: |
-        misc/cibuild.sh quick cppcheck listhacks
+        misc/cibuild.sh quick
     - stage: Stage2
-      name: "Quick-2 (scan-build listunused)"
+      name: "Quick-2 (cppcheck + scan-build)"
       env: PIPELINE=clang
       script: |
-        misc/cibuild.sh scan-build
+        misc/cibuild.sh cppcheck scan-build
     - stage: Stage3
       name: "Quick-3 (clang-tidy)"
       env: PIPELINE=clang
       script: |
         misc/cibuild.sh clang-tidy
     - stage: Stage4
-      name: "Quick-4 (bintray)"
+      name: "Quick-4 (listunused + listhacks + bintray)"
       env: PIPELINE=clang
       script: |
-        echo "$BINTRAY_API_KEY" > .bintray_api_key
-        misc/cibuild.sh listunused bintray
+        echo "$BINTRAY_API_KEY" > .bintray_api_key &&
+        misc/cibuild.sh listunused listhacks bintray
 
     # == 'AppImage' Pipeline ==
     # Build a highly optimized AppImage and upload it.
@@ -62,22 +62,18 @@ jobs:
       script: |
         misc/cibuild.sh gcc
     - stage: Stage2
-      name: "AppImage-2 (build)"
+      name: "AppImage-2 (appimage)"
       env: PIPELINE=AppImage
       script: |
         misc/cibuild.sh appimage
     - stage: Stage3
-      name: "AppImage-3 (check)"
+      name: "AppImage-3 (check + bintray)"
       env: PIPELINE=AppImage
       script: |
-        misc/cibuild.sh check
-    - stage: Stage4
-      name: "AppImage-4 (bintray)"
-      env: PIPELINE=AppImage
-      script: |
-        echo "$BINTRAY_API_KEY" > .bintray_api_key
-        test "$TRAVIS_BRANCH^$TRAVIS_PULL_REQUEST" != "master^false" ||
-        misc/cibuild.sh bintray
+        misc/cibuild.sh check && {
+          echo "$BINTRAY_API_KEY" > .bintray_api_key &&
+          test "$TRAVIS_BRANCH^$TRAVIS_PULL_REQUEST" != "master^false" ||
+          misc/cibuild.sh bintray ; }
 
 notifications:
   irc:
