--- a/.travis.yml
+++ b/.travis.yml
@@ -54,7 +54,7 @@ jobs:
     # == 'Gcc' Pipeline ==
     # Build a highly optimized Gcc and upload it.
     - stage: Stage1
-      name: "Gcc-1 (autogen.sh)"
+      name: "GCC-1 (autogen.sh)"
       env: PIPELINE=Gcc
       before_install: |
         uname -a && pwd && echo nproc=`nproc` && rm -v -rf ~/cache/* ~/beast &&
@@ -62,15 +62,10 @@ jobs:
       script: |
         misc/cibuild.sh gcc
     - stage: Stage2
-      name: "Gcc-2 (appimage)"
+      name: "GCC-2 (appimage + check + bintray)"
       env: PIPELINE=Gcc
       script: |
-        misc/cibuild.sh appimage
-    - stage: Stage3
-      name: "Gcc-3 (check + bintray)"
-      env: PIPELINE=Gcc
-      script: |
-        misc/cibuild.sh check && {
+        misc/cibuild.sh appimage check && {
           echo "$BINTRAY_API_KEY" > .bintray_api_key &&
           test "$TRAVIS_BRANCH^$TRAVIS_PULL_REQUEST" != "master^false" ||
           misc/cibuild.sh bintray ; }
