--- a/.travis.yml
+++ b/.travis.yml
@@ -23,34 +23,6 @@ install: |
 jobs:
   include:
 
-    # == 'Quick' Pipeline ==
-    # Generate all possible source code linting reports,
-    # sort slow jobs into separate stages to avoid timeouts.
-    - stage: Stage1
-      name: "Quick-1 (autogen.sh)"
-      env: PIPELINE=clang
-      before_install: |
-        uname -a && pwd && echo nproc=`nproc` && rm -v -rf ~/cache/* ~/beast &&
-        travis_retry git fetch --unshallow && cd .. && mv beast ~/
-      script: |
-        misc/cibuild.sh quick
-    - stage: Stage2
-      name: "Quick-2 (cppcheck + scan-build)"
-      env: PIPELINE=clang
-      script: |
-        misc/cibuild.sh cppcheck scan-build
-    - stage: Stage3
-      name: "Quick-3 (clang-tidy)"
-      env: PIPELINE=clang
-      script: |
-        misc/cibuild.sh clang-tidy
-    - stage: Stage4
-      name: "Quick-4 (listunused + listhacks + bintray)"
-      env: PIPELINE=clang
-      script: |
-        echo "$BINTRAY_API_KEY" > .bintray_api_key &&
-        misc/cibuild.sh listunused listhacks bintray
-
     # == 'Gcc' Pipeline ==
     # Build a highly optimized Gcc and upload it.
     - stage: Stage1
@@ -69,6 +41,34 @@ jobs:
           echo "$BINTRAY_API_KEY" > .bintray_api_key &&
           test "$TRAVIS_BRANCH^$TRAVIS_PULL_REQUEST" != "master^false" ||
           misc/cibuild.sh bintray ; }
+
+    # == 'Linting' Pipeline ==
+    # Generate all possible source code linting reports,
+    # sort slow jobs into separate stages to avoid timeouts.
+    - stage: Stage1
+      name: "Linting-1 (autogen.sh)"
+      env: PIPELINE=clang
+      before_install: |
+        uname -a && pwd && echo nproc=`nproc` && rm -v -rf ~/cache/* ~/beast &&
+        travis_retry git fetch --unshallow && cd .. && mv beast ~/
+      script: |
+        misc/cibuild.sh quick
+    - stage: Stage2
+      name: "Linting-2 (cppcheck + scan-build)"
+      env: PIPELINE=clang
+      script: |
+        misc/cibuild.sh cppcheck scan-build
+    - stage: Stage3
+      name: "Linting-3 (clang-tidy)"
+      env: PIPELINE=clang
+      script: |
+        misc/cibuild.sh clang-tidy
+    - stage: Stage4
+      name: "Linting-4 (listunused + listhacks + bintray)"
+      env: PIPELINE=clang
+      script: |
+        echo "$BINTRAY_API_KEY" > .bintray_api_key &&
+        misc/cibuild.sh listunused listhacks bintray
 
 notifications:
   irc:
