.travis.yml: test Fedora-27 builds
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/.travis.yml
+++ b/.travis.yml
@@ -41,6 +41,16 @@ jobs:
           test "$TRAVIS_BRANCH^$TRAVIS_PULL_REQUEST" != "master^false" ||
           misc/cibuild.sh bintray ; }
 
+    # == Stage3 Fedora ==
+    # Fedora build tests, runs *after* the 'appimage' succeeded
+    - stage: Stage3
+      name: "Fedora-27 (build + check)"
+      env: PIPELINE=Fedora-27
+      before_install: |
+        rm -v -rf ~/cache/* ~/beast && travis_retry git fetch --unshallow && cd .. && mv beast ~/
+      script: |
+        docker build --build-arg DIST=fedora:27 -f misc/Dockerfile-yum -t beast-fedora-27 .
+
     # == 'Linting' Pipeline ==
     # Generate all possible source code linting reports,
     # sort slow jobs into separate stages to avoid timeouts.
