--- a/misc/Makefile.sub
+++ b/misc/Makefile.sub
@@ -153,7 +153,7 @@ bintray:		# upload out/ contents to bintray
 		misc/bintray.sh beast-team/testing/Beast-AppImage -k $(BINTRAY_KEEPS) -g -v $(clean_version) $(USE_BINTRAY_API_KEY_FILE) \
 		  -d out/bin/beast-$(clean_version).x64.AppImage
 	@: # upload tarballs of existing log directories
-	$(Q) for d in cppcheck scan-build clang-tidy hacks unused ; do \
+	$(Q) for d in cppcheck scan-build clang-tidy hacks unused asan ; do \
 		(set -- out/$$d/*.* ; test -r "$$1") || continue ; \
 		tar cJf out/$$d-$(clean_version).tar.xz -C out/ $$d/ && \
 		misc/bintray.sh beast-team/testing/Reports -k $(BINTRAY_KEEPS) -g -v $(clean_version) $(USE_BINTRAY_API_KEY_FILE) \
