--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ jobs:
     # == 'Gcc' Pipeline ==
     # Build a highly optimized Gcc and upload it.
     - stage: Stage1
-      name: "GCC-1 (autogen.sh)"
+      name: "GCC-1 (autogen)"
       env: PIPELINE=Gcc
       before_install: |
         rm -v -rf ~/cache/* ~/beast && travis_retry git fetch --unshallow && cd .. && mv beast ~/
@@ -45,7 +45,7 @@ jobs:
     # Generate all possible source code linting reports,
     # sort slow jobs into separate stages to avoid timeouts.
     - stage: Stage1
-      name: "Linting-1 (autogen.sh)"
+      name: "Linting-1 (autogen)"
       env: PIPELINE=clang
       before_install: |
         rm -v -rf ~/cache/* ~/beast && travis_retry git fetch --unshallow && cd .. && mv beast ~/
@@ -64,9 +64,9 @@ jobs:
         echo "$BINTRAY_API_KEY" > .bintray_api_key &&
         misc/cibuild.sh listunused listhacks bintray
 
-    # == Stage3 Fedora ==
+    # == Stage2 Fedora ==
     # Fedora build tests, runs *after* the 'appimage' succeeded
-    - stage: Stage3
+    - stage: Stage2
       name: "Fedora-27 (build + check)"
       env: PIPELINE=Fedora-27
       before_install: |
@@ -76,25 +76,20 @@ jobs:
 
     # == 'Asan' Pipeline ==
     # Run checks with asan turned on.
-    - stage: Stage1
-      name: "Asan-1 (autogen.sh)"
-      env: PIPELINE=clang
+    - stage: Stage3
+      name: "Asan-3 (autogen + check)"
+      env: PIPELINE=asan
       before_install: |
         rm -v -rf ~/cache/* ~/beast && travis_retry git fetch --unshallow && cd .. && mv beast ~/
-      script: |
-        misc/cibuild.sh asan
-    - stage: Stage2
-      name: "Asan-2 (check)"
-      env: PIPELINE=clang
       before_script: |
         echo "$BINTRAY_API_KEY" > .bintray_api_key
       script: |
-        misc/ciwitness.sh out/asan/build.log all check bintray
+        misc/ciwitness.sh asan out/asan/build.log all check bintray
 
   # == allow_failures ==
   allow_failures:
     - script: |
-        misc/ciwitness.sh out/asan/build.log all check bintray
+        misc/ciwitness.sh asan out/asan/build.log all check bintray
 
 notifications:
   irc:
