--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ cache:
   directories:
     - ~/cache/
     - ~/beast/
-    # We use $PIPE to carry cache context along job pipelines (workflows)
+    # We use $PIPELINE to carry cache context along job pipelines (workflows)
     # https://docs.travis-ci.com/user/caching/
 
 # Common scripts
@@ -84,7 +84,7 @@ jobs:
       before_script: |
         echo "$BINTRAY_API_KEY" > .bintray_api_key
       script: |
-        misc/ciwitness.sh asan out/asan/build.log all check bintray
+        misc/ciwitness.sh out/asan/build.log asan all check bintray
 
     # == 'Ubsan' Pipeline ==
     # Run checks with ubsan turned on.
@@ -96,16 +96,16 @@ jobs:
       before_script: |
         echo "$BINTRAY_API_KEY" > .bintray_api_key
       script: |
-        misc/ciwitness.sh ubsan out/ubsan/build.log all check bintray
+        misc/ciwitness.sh out/ubsan/build.log ubsan all check bintray
 
   # == allow_failures ==
   allow_failures:
     - script: |
         docker build --build-arg DIST=fedora:27 -f misc/Dockerfile-yum -t beast-fedora-27 .
     - script: |
-        misc/ciwitness.sh asan out/asan/build.log all check bintray
+        misc/ciwitness.sh out/asan/build.log asan all check bintray
     - script: |
-        misc/ciwitness.sh ubsan out/ubsan/build.log all check bintray
+        misc/ciwitness.sh out/ubsan/build.log ubsan all check bintray
 
 notifications:
   irc:
