--- a/.travis.yml
+++ b/.travis.yml
@@ -36,20 +36,15 @@ jobs:
     # Generate all possible source code linting reports,
     # sort slow jobs into separate stages to avoid timeouts.
     - stage: Stage1
-      name: "Linting-1 (autogen)"
+      name: "Linting-2 (autogen + cppcheck + scan-build)"
       env: PIPELINE=clang
       before_install: |
         rm -v -rf ~/cache/* ~/beast && travis_retry git fetch --unshallow && cd .. && mv beast ~/
       install: |
         touch ~/cache/"$PIPELINE-$TRAVIS_BUILD_STAGE_NAME" && ls -l ~/cache/ && cd ~/beast/
       script: |
-        misc/cibuild.sh quick
+        misc/cibuild.sh quick cppcheck scan-build
     - stage: Stage2
-      name: "Linting-2 (cppcheck + scan-build)"
-      env: PIPELINE=clang
-      script: |
-        misc/cibuild.sh cppcheck scan-build
-    - stage: Stage3
       name: "Linting-3 (clang-tidy + listunused + listhacks + bintray)"
       env: PIPELINE=clang
       script: |
@@ -59,7 +54,7 @@ jobs:
 
     # == Stage2 Fedora ==
     # Fedora build tests, runs *after* the 'appimage' succeeded
-    - stage: Stage2
+    - stage: Stage1
       name: "Fedora-27 (build + check)"
       env: PIPELINE=Fedora-27
       before_install: |
@@ -69,7 +64,7 @@ jobs:
 
     # == 'Asan' Pipeline ==
     # Run checks with asan turned on.
-    - stage: Stage3
+    - stage: Stage2
       name: "Asan (autogen + check)"
       env: PIPELINE=asan
       before_install: |
@@ -81,7 +76,7 @@ jobs:
 
     # == 'Ubsan' Pipeline ==
     # Run checks with ubsan turned on.
-    - stage: Stage3
+    - stage: Stage2
       name: "Ubsan (autogen + check)"
       env: PIPELINE=ubsan
       before_install: |
