--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ jobs:
       name: "GCC (autogen + appimage + check + bintray)"
       env: PIPELINE=Gcc
       before_install: |
-        travis_retry git fetch --unshallow
+        travis_retry git fetch --unshallow --tags
       script: |
         misc/cibuild.sh gcc appimage check && {
           echo "$BINTRAY_API_KEY" > .bintray_api_key &&
@@ -39,7 +39,7 @@ jobs:
       env: PIPELINE=linting
       before_install: |
         rm -v -rf ~/cache/$TRAVIS_BUILD_NUMBER/ ~/beast &&
-        travis_retry git fetch --unshallow &&
+        travis_retry git fetch --unshallow --tags &&
         cd .. && mv beast ~/ && cd ~/beast/ &&
         (cd ~/cache/ && pwd && ls -al )
       script: |
@@ -66,7 +66,7 @@ jobs:
       name: "Fedora-27 (build + check)"
       env: PIPELINE=Fedora-27
       before_install: |
-        travis_retry git fetch --unshallow
+        travis_retry git fetch --unshallow --tags
       script: |
         docker build --build-arg DIST=fedora:27 -f misc/Dockerfile-yum -t beast-fedora-27 .
 
@@ -76,7 +76,7 @@ jobs:
       name: "Asan (autogen + check)"
       env: PIPELINE=asan
       before_install: |
-        travis_retry git fetch --unshallow
+        travis_retry git fetch --unshallow --tags
       before_script: |
         echo "$BINTRAY_API_KEY" > .bintray_api_key
       script: |
@@ -88,7 +88,7 @@ jobs:
       name: "Ubsan (autogen + check)"
       env: PIPELINE=ubsan
       before_install: |
-        travis_retry git fetch --unshallow
+        travis_retry git fetch --unshallow --tags
       before_script: |
         echo "$BINTRAY_API_KEY" > .bintray_api_key
       script: |
