--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
-.gitattributes export-ignore  
-.gitignore export-ignore
-/.travis.yml export-ignore
+/version\.sh export-subst
+/\.gitattributes export-ignore
+/\.travis.yml export-ignore
+\.gitignore export-ignore
