--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,1 @@
-Makefile.in
-Makefile
-.deps
-.libs
-*.pyc
-*.la
-*.lo
-*.o
-/ChangeLog
-/INSTALL
-/aclocal.m4
-/autom4te.cache
-/config.log
-/config.status
-/configure
-/libtool
-/stamp-h1
+/out
