--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ jobs:
     # == 'Gcc' Pipeline ==
     # Build a highly optimized Gcc and upload it.
     - stage: Stage1
-      name: "GCC (autogen + appimage + check + bintray)"
+      name: "GCC (gcc appimage + check + bintray)"
       env: PIPELINE=Gcc
       before_install: |
         travis_retry git fetch --unshallow --tags
@@ -35,7 +35,7 @@ jobs:
     # Generate all possible source code linting reports,
     # sort slow jobs into separate stages to avoid timeouts.
     - stage: Stage1
-      name: "Linting-1 (autogen + cppcheck + scan-build)"
+      name: "Linting-1 (clang cppcheck + scan-build)"
       env: PIPELINE=linting
       before_install: |
         rm -v -rf ~/cache/$TRAVIS_BUILD_NUMBER/ ~/beast &&
@@ -72,7 +72,7 @@ jobs:
     # == 'Asan' Pipeline ==
     # Run checks with asan turned on.
     - stage: Stage2
-      name: "Asan (autogen + check)"
+      name: "Asan check"
       env: PIPELINE=asan
       before_install: |
         travis_retry git fetch --unshallow --tags
@@ -84,7 +84,7 @@ jobs:
     # == 'Ubsan' Pipeline ==
     # Run checks with ubsan turned on.
     - stage: Stage2
-      name: "Ubsan (autogen + check)"
+      name: "Ubsan check"
       env: PIPELINE=ubsan
       before_install: |
         travis_retry git fetch --unshallow --tags
