MISC: Dockerfile-yum: adjust fedora builds
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/misc/Dockerfile-yum
+++ b/misc/Dockerfile-yum
@@ -33,7 +33,7 @@ RUN \
 WORKDIR /opt/src/beast
 
 # Configure source tree, possibly using compiler wrapper
-RUN ./autogen.sh --prefix=/opt
+RUN make default prefix=/opt
 
 # Build sources in parallel
 RUN nice make -j`nproc`
