--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 /version\.sh export-subst
-/\.gitattributes export-ignore
-/\.travis.yml export-ignore
-\.gitignore export-ignore
+/.git* export-ignore
+/.travis.yml export-ignore
+/r+d-files/ export-ignore
+/*/icons/*.xcf export-ignore
