--- a/ebeast/package.json.in
+++ b/ebeast/package.json.in
@@ -9,18 +9,18 @@
     "vue": "^2.5.13"
   },
   "devDependencies": {
-    "node-gyp": "^3.5.0",
-    "node-sass": "^4.5.3",
+    "babel-core": "^6.8.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "^6.6.0",
+    "babelify": "^7.3.0",
+    "browserify": "^14.1.0",
     "electron": "^2.0.18",
     "electron-devtools-installer": "^2.2.4",
-    "browserify": "^14.1.0",
-    "vueify": "^9.4.1",
-    "babel-core": "^6.8.0",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babelify": "^7.3.0",
     "eslint": "^3.16.1",
-    "eslint-plugin-html": "^2.0.1"
+    "eslint-plugin-html": "^2.0.1",
+    "node-gyp": "^3.5.0",
+    "node-sass": "^4.5.3",
+    "vueify": "^9.4.1"
   },
   "license": "LGPL-2.1+",
   "scripts": {
