--- a/ebeast/package.json.in
+++ b/ebeast/package.json.in
@@ -16,8 +16,9 @@
     "browserify": "^14.1.0",
     "electron": "^2.0.18",
     "electron-devtools-installer": "^2.2.4",
-    "eslint": "^3.16.1",
-    "eslint-plugin-html": "^2.0.1",
+    "eslint": "^5.15.1",
+    "eslint-plugin-html": "^5.0.3",
+    "eslint-plugin-vue": "^5.2.2",
     "node-gyp": "^3.5.0",
     "node-sass": "^4.5.3",
     "vueify": "^9.4.1"
