--- a/ebeast/package.json.in
+++ b/ebeast/package.json.in
@@ -8,12 +8,17 @@
     "jquery": "^3.3.1",
     "vue": "^2.5.13"
   },
+  "babel": {
+    "presets": [
+      ["env", { "targets": { "chrome": "61" } } ]
+    ]
+  },
   "devDependencies": {
-    "babel-core": "^6.8.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-es2015": "^6.6.0",
-    "babelify": "^7.3.0",
-    "browserify": "^14.1.0",
+    "@babel/core": "^7.3.4",
+    "@babel/plugin-transform-runtime": "^7.3.4",
+    "babel-preset-env": "^1.7.0",
+    "babelify": "^10.0.0",
+    "browserify": "^16.2.3",
     "electron": "^2.0.18",
     "electron-devtools-installer": "^2.2.4",
     "eslint": "^5.15.1",
