--- a/misc/Dockerfile-cibuild
+++ b/misc/Dockerfile-cibuild
@@ -6,6 +6,8 @@ FROM $DIST
 
 WORKDIR /usr/src/beast
 
+RUN apt-get update && apt-get install -y python3-pandocfilters
+
 # make sure getpwuid() works, and ~/ is writable, otherwise many tools break
 ARG USERGROUP
 RUN : && \
