MISC: Dockerfile-yum: install python3-pandocfilters, needed for doc
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/misc/Dockerfile-yum
+++ b/misc/Dockerfile-yum
@@ -17,7 +17,7 @@ RUN retry yum -y install \
     findutils file bzip2 \
     gcc-c++ git libtool gettext-devel perl-XML-Parser \
     alsa-lib-devel flac-devel libgnomecanvas-devel libvorbis-devel fluidsynth-devel libmad-devel \
-    pandoc doxygen graphviz \
+    pandoc python3-pandocfilters doxygen graphviz \
     npm ImageMagick libXScrnSaver GConf2
 
 # Setup build environment and provide the git repositories
